<resources>
    <string name="app_name">Student Hotel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user@user.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_about">About Us</string>
    <string name="menu_rooms">Rooms</string>
    <string name="menu_prices">Prices</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_account">Profile</string>

    <string name="text_welcome">Welcome To</string>
    <string name="tab_stays">Stays</string>
    <string name="tab_activities">Activities</string>
    <string name="date_hint">Pick a date range</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="search_button">Search</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_name">Name</string>
    <string name="existing_account_button">Already have an account?</string>
    <string name="confirm_password">Re-type your password</string>
    <string name="are_you">Are you?</string>
    <string name="new_password_hint">New Password</string>
    <string name="change_password_button">Change Password</string>
    <string name="single_room">Single Room</string>
    <string name="double_room">Double Room</string>
    <string name="suite">Suite</string>
    <string name="apartment">Apartment</string>
    <string name="messages_tab">Messages</string>
    <string name="notifications_tab">Notifications</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="andreea_higiu">Andreea Higiu</string>
    <string name="team_lead">Team Lead</string>
    <string name="dia_description">Sunt un spirit creativ, deschis la idei noi și ieșite din comun, sunt plină de energie, optimism și motivație de a atinge succesul. Îmi place arta și ador călătoriile, iar tocmai de aceea simt că StudentHub a reușit să combine aceste două pasiuni ale mele oferindu-mi oportunitatea de a împărtăși experiențe memorabile. În cadrul proiectului am lucrat la design, la găsirea unei strategii potrivite de marketing, la documentația pentru Beachhead Market, și am adus contribuție în găsirea de End-Users și definirea pieței Top-Target.</string>
    <string name="raluca_macovei">Raluca Macovei</string>
    <string name="java_mobile_app_developer">Java Mobile App Developer</string>
    <string name="raluca_description">Ca parte din echipa StudentHub, rolul meu principal a fost sa dezvolt prototipul aplicației noastre mobile. Astfel, responsabilitatea mea a fost sa digitalizez tot procesul de check-in/check-out, verificare disponibilități și oferire de informații, pentru a crea un proces cât mai simplu pentru studenții interesați, dar și pentru posibilii investitori</string>
    <string name="dragos_ciopei">Dragos Ciopei</string>
    <string name="web_developer">WEB Developer</string>
    <string name="dragos_description">Ca parte din echipa StudentHub, rolul meu principal a fost sa dezvolt comunicarea si prezentarea WEB a business-ului nostru. Astfel, responsabilitatea mea a fost expunerea online si publicitatea dar si proiectarea unei aplciatii de instant messaging pentru a ajuta potentialii clienti.</string>
    <string name="ingrid_romila">Ingrid Romila</string>
    <string name="ingrid_description">Sunt o persoana optimistă, plina de viata si mereu gata sa-ti ofere zâmbetul de care ai nevoie pentru a-ti face ziua mai buna. Imi place sa mă implic si sa ajut oameni si tocmai de aceea valorile mele se aliniază cu principiile echipei StudentHub. Sunt foarte atentă la detalii, analizez mult, iar acesta a fost atuul meu în cadrul acestui proiect. Am contribuit la crearea planului si pașilor proiectului, cat si la definirea si gasirea exacta a nișei de piata si a utilizatorilor finali.</string>
    <string name="analyst">Analyst</string>
    <string name="administration">Administration</string>
    <string name="victor_description">Sunt ambitios si sunt pasionat de matematica si sah. Urmez cursurile a doua facultati (Informatica si Drept). Cred in a inova, motiv pentru care am ales disciplina AIIT ca optional! M-am ocupat de partea legislativa in ceea ce priveste necesitatea avizelor si normelor legale ce trebuie indeplinite pentru deschiderea hotelului</string>
    <string name="mihai_berea">Mihai Berea</string>
    <string name="finance">Finance</string>
    <string name="mihai_description">Stabilirea metodelor pentru a putea intra in contact cu posibili investitori, verificarea eligibilatii pentru beneficierea de fonduri de investitii, propunerea de a avea o cantina asociata cu o aplicatie de mobil, estimarile serviciilor oferite cat si durata acestora impreuna cu veniturile anuale, identificarea serviciilor comparabile si a bugetului de care il dispun pentru prestare si mentinere pe piata.</string>
    <string name="victor_stanciu">Victor Stanciu</string>
    <string name="menu_services">Services</string>
    <string name="title_services">Everything under one roof</string>
    <string name="subtitle_services">Our hotels are dynamic hubs where people can meet, work, eat, drink, hold events or stay for anything from a night to a year.</string>
    <string name="student_accommodation">Student accommodation</string>
    <string name="card1_description">Our all-inclusive student accommodation gives great value and an inspiring experience.</string>
    <string name="hotel_rooms">Hotel rooms</string>
    <string name="card2_description">Whether you’re in town for work or play, our modern rooms make for a stylish stay.</string>
    <string name="extended_stay">Extended Stay</string>
    <string name="card3_description">Our rooms have all the creature comforts you need to settle in for a longer stay.</string>
    <string name="card4_description">Our co-working spaces are hubs where freelancers and businesses can change the world.</string>
    <string name="co_working_space">Co-working Space</string>
    <string name="meeting_amp_event_rooms"><![CDATA[Meeting & Event Rooms]]></string>
    <string name="card5_description">Our flexible, fully-equipped spaces are ideal for productive meetings and awesome events.</string>
    <string name="eat_amp_drink"><![CDATA[Eat & Drink]]></string>
    <string name="card6_description">Our restaurants and bars are perfect for sharing moments in an unfussy, lively setting.</string>
    <string name="contact_description">We are here to answer any questions you may have about our services.</string>
    <string name="phone">Phone</string>
    <string name="phone_number">+40 761383639</string>
    <string name="e_mail">E-mail</string>
    <string name="email">ralucamacovei10@gmail.com</string>
    <string name="website">Website</string>
    <string name="hotel_website">https://studenthotel.herokuapp.com/</string>

    <string name="room_type">Room Type</string>
    <string name="service_type">Service Type</string>
    <string name="account_type">AccountType</string>


    <string-array name="room_options">
        <item>Single</item>
        <item>Double</item>
        <item>Suite</item>
        <item>Apartment</item>
    </string-array>
    <string-array name="account_options">
        <item>Student</item>
        <item>Pupil</item>
        <item>Teaching Staff</item>
        <item>Other</item>
    </string-array>
    <string-array name="service_options">
        <item>Hotel</item>
        <item>Extended</item>
        <item>Extended_Basic</item>
    </string-array>

</resources>