<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.studenthotel.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_homeFragment_to_profileFragment"
        app:destination="@id/nav_home"/>
    </fragment>

    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.example.studenthotel.ui.gallery.GalleryFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/nav_prices"
        android:name="com.example.studenthotel.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_prices"
        tools:layout="@layout/fragment_prices" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.studenthotel.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.studenthotel.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/action_explore"
        android:name="com.example.studenthotel.ui.home.HomeFragment"
        android:label="@string/menu_explore"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/action_inbox"
        android:name="com.example.studenthotel.ui.inbox.InboxFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_inbox" />
    <fragment
        android:id="@+id/action_profile"
        android:name="com.example.studenthotel.ui.profile.ProfileFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_profile" />

</navigation>