<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_pink">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <LinearLayout
        android:id="@+id/date_range"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/date_range_stays"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date_hint" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_calendar"
            android:background="@color/white"
            android:contentDescription="@string/calendar_icon" />
    </LinearLayout>
    <Spinner
        android:id="@+id/room_spinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:entries="@array/room_options"
        android:spinnerMode="dialog"
        android:prompt="@string/room_type"/>
    <Spinner
        android:id="@+id/service_spinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:entries="@array/service_options"
        android:spinnerMode="dialog"
        android:prompt="@string/service_type"/>
    <Button
        android:id="@+id/search_stays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_marginTop="20dp"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>