<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary_variant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/nav_header_main" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@color/background_pink"
            android:clickable="true"
            android:drawableStart="@drawable/ic_check_in"
            android:drawableLeft="@drawable/ic_check_in"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/check_in"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@color/background_pink"
            android:clickable="true"
            android:drawableStart="@drawable/ic_check_out"
            android:drawableLeft="@drawable/ic_check_out"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/check_out"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@color/black"
            android:clickable="true"
            android:drawableStart="@drawable/ic_sign_out"
            android:drawableLeft="@drawable/ic_sign_out"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>